clusters/default/ryanschnabel-com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryanschnabel
  namespace: ryanschnabel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ryanschnabel
  template:
    metadata:
      labels:
        app: ryanschnabel
    spec:
      containers:
      - name: ryanschnabel
        image: schniebel/ryanschnabel-com:4b1c1618bca4936901a38f9bb9016db4a2c239e1
        ports:
        - containerPort: 80
