clusters/default/ryanschnabel-com/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ryanschnabel-com-ingressroute
  namespace: default
spec:
  routes:
  - kind: Rule
    match: Host(`ryanschnabel.com`)
    services:
    - kind: Service
      name: welcome-nginx-svc-prod
      port: 80
  - kind: Rule
    match: Host(`dashboard.ryanschnabel.com`)
    middlewares:
      - name: nginx-basic-auth
    services:
    - kind: TraefikService
      name: api@internal
  #tls:
  #  secretName: ryanschnabel-com-production-tls
